# Finmodel-2.0

./: .gitignore  AGENTS.md  AGENTS.ru.md  Dockerfile  README.md  adv_campaigns_details_import_flat.py  adv_campaigns_import_flat.py  adv_fullstats_import_flat.py  config.example.yml  create_db.py  docker-compose.yml  dump_schema.py  finmodel.db  finotchet_import.py  katalog.py  nm_report_history_import.py  orderswb_import_flat.py  paid_storage_import_flat.py  paid_storage_import_incremental.py  pyproject.toml  requirements.txt  run_finmodel_task.ps1  saleswb_import_flat.py  schedule.example.yml  schema.sql  setup_scheduler.ps1  stockswb_import_flat.py  wb_goods_prices_import_flat.py  wb_spp_fetch.py  wb_spp_fetch_final.py  wb_spp_fetch_simple.py  wb_tariffs_box_import.py  wbtariffs_commission_import.py
devtools/: setup.ps1  setup_scheduler.ps1
migrations/: 20240706_add_snapshot_date_to_katalog.sql
scripts/: create_db.py  setup.sh
src/finmodel/: __main__.py  cli.py  logger.py
src/finmodel/scripts/: __init__.py  adv_campaigns_details_import_flat.py  adv_campaigns_import_flat.py  adv_fullstats_import_flat.py  create_db.py  dump_schema.py  finotchet_import.py  katalog.py  nm_report_history_import.py  orderswb_import_flat.py  paid_storage_import_flat.py  paid_storage_import_incremental.py  saleswb_import_flat.py  stockswb_import_flat.py  wb_goods_prices_import_flat.py  wb_spp_fetch.py  wb_spp_fetch_final.py  wb_spp_fetch_simple.py  wb_tariffs_box_import.py  wbtariffs_commission_import.py
src/finmodel/utils/: db_load.py  paths.py  (+2 more)
tests/: AGENTS.md  test_load_organizations.py  test_settings.py
tests/scripts/: test_adv_fullstats_import_flat.py  test_finotchet_import.py  test_katalog.py  test_orderswb_import_flat.py  test_wb_goods_prices_import_flat.py
tests/utils/: test_db_load.py  test_load_organizations.py  test_paths.py  test_scheduler.py  test_settings.py
utils/: settings.py
